# parallel-hough-transform

./: .gitignore  INSTALL-OPENCV.md  README.md  example.cpp  parallel-hough-transform.sln  shell.nix
parallel-hough-transform/: CMakeLists.txt  compile_commands.json  main.cpp  mpi-hough.cpp  openmp-hough.cpp  parallel-hough-transform.cpp  parallel-hough-transform.vcxproj  parallel-hough-transform.vcxproj.filters  serial-hough.cpp  shell.nix
parallel-hough-transform/x64/Debug/: parallel-hough-transform.exe.recipe  parallel-hough-transform.ilk  vc143.idb
parallel-hough-transform/x64/Debug/parallel.9a8e95b5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  parallel-hough-transform.lastbuildstate
