cmake_minimum_required(VERSION 3.0)
project(main)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_GXX_FLAGS "-std=c++11")
find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
find_package(MPI REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${MPI_INCLUDE_PATH})
include_directories(${OpenMP_INCLUDE_DIRS})
add_executable(main main.cpp)
target_link_libraries(main ${OpenCV_LIBS} OpenMP::OpenMP_CXX)
target_link_libraries(main ${MPI_LIBRARIES})
target_link_libraries(main ${OpenMP_LIBRARIES})
